# tmin

./: README.md
src/: CMakeLists.txt  do  line_parse.cpp  line_parse.h  m_config_parse.cpp  m_config_parse.h  machine_components.cpp  machine_components.h  main.cpp
test/src/: CMakeLists.txt  m_config_parse_test.h  minitest.hpp  test_main.cpp
texts/: documentation.txt  sample.txt  scratchpad.txt
